--- a/App or Troll/app/src/main/AndroidManifest.xml
+++ b/App or Troll/app/src/main/AndroidManifest.xml
@@ -13,14 +13,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AccelerometerActivity" >
+        <activity android:name=".AccelerometerActivity"
+            android:screenOrientation="portrait">
         </activity>
         <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19"/>
 
