--- a/App or Troll/app/src/main/AndroidManifest.xml
+++ b/App or Troll/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
 
         <activity android:name=".CollectActivity" >
         </activity>
+        <activity android:name=".ML_BluetoothCollection" >
+        </activity>
     </application>
 
 </manifest>
