Lavet PrototypeActivity, der står for at gøre alt det vores prototype skal kunne. Den leder efter signal fra de 3 beacons, finder ud af hvilket rum telefonen er i (TODO: Brug WEKA, lige nu faker den bare) og så ændrer den settings accordingly.
Appen er MEGET pæn. Fight me.

--- a/App or Troll/app/src/main/AndroidManifest.xml
+++ b/App or Troll/app/src/main/AndroidManifest.xml
@@ -36,11 +36,13 @@
 
         <activity
             android:name=".CollectActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ML_BluetoothCollection"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity android:name=".PrototypeActivity" >
         </activity>
     </application>
 
